Commit al master del blogpost en su version mas reciente

--- a/prueba.html
+++ b/prueba.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/Pruebaestilo.css" />
     </head>
     <body>
-        <h1>El primer paso</h1>
-        <p>Hola mi nombre es Luis Tapia</p>
+        <div id="container">
+            <div id="post">
+                <h1>El primer paso del curso de Platzi</h1>
+                <p>Hola mi nombre es Luis Tapia, buena tarde, tengo 19 años y hoy haremos cosas increibles</p>
+            </div>
+        </div>
     </body>
 </html>
