--- a/prueba.html
+++ b/prueba.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>El primer paso del curso de Platzi</h1>
