--- a/prueba.html
+++ b/prueba.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>El primer paso del curso de Platzi</h1>
                 <p>Hola mi nombre es Luis Tapia, buena tarde, tengo 19 años y hoy haremos cosas increibles</p>
+                <p>Los blog son la mejor manera de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. pero estadisticamente no lo eres.... Por ahora.</p>
             </div>
         </div>
     </body>
