--- a/prueba.html
+++ b/prueba.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenes/navecita.png" />
+                <img id="logo" src="imagenes/navecita1.png" />
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
