--- a/prueba.html
+++ b/prueba.html
@@ -13,6 +13,7 @@
             <div id="post">
                 <h1>El primer paso del curso de Platzi</h1>
                 <p>Hola mi nombre es Luis Tapia, buena tarde, tengo 20 años y hoy haremos m&aacute;s cosas incre&iacute;bles</p>
+                <p><img src="imagenes/espacio.jpg" width="100%" /></p>
                 <p>Los blog son la mejor manera de compartir informacion y tus ideas. Mucho m&aacute;s que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... Por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
